<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.climbsense.application.ui.fragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.climbsense.application.ui.fragment.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.climbsense.application.ui.fragment.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_chart"
        android:name="com.climbsense.application.ui.fragment.ChartFragment"
        android:label="@string/title_chart"
        tools:layout="@layout/fragment_chart" />

    <fragment
        android:id="@+id/navigation_connection"
        android:name="com.climbsense.application.ui.fragment.ConnectionFragment"
        android:label="@string/title_connection"
        tools:layout="@layout/fragment_connection" />

    <fragment
        android:id="@+id/navigation_climb"
        android:name="com.climbsense.application.ui.fragment.ClimbFragment"
        android:label="@string/title_climb"
        tools:layout="@layout/fragment_climb" />

</navigation>