<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="com.climbsense.application.ui.fragment.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_background_item"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/profile_image_button"
            android:layout_width="200px"
            android:layout_height="200px"
            android:src="@drawable/baseline_account_circle_24" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10px"
            android:paddingBottom="10px"
            android:weightSum="2">

            <EditText
                android:id="@+id/form_lastname_edit"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_background_edit"
                android:ems="10"
                android:hint="@string/lastname"
                android:inputType="text"
                android:padding="10dp" />

            <EditText
                android:id="@+id/form_firstname_edit"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_background_edit"
                android:ems="10"
                android:hint="@string/firstname"
                android:inputType="text"
                android:padding="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10px"
            android:paddingBottom="10px">

            <TextView
                android:id="@+id/form_date_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_background_edit"
                android:gravity="center"
                android:hint="@string/birthday"
                android:padding="10dp" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/form_radiogroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/form_male_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/form_female_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/female" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10px"
            android:paddingBottom="10px"
            android:weightSum="6">

            <EditText
                android:id="@+id/form_height_edit"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/rounded_background_edit"
                android:ems="10"
                android:hint="@string/height"
                android:inputType="number"
                android:padding="10dp" />

            <TextView
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/cm" />

            <EditText
                android:id="@+id/form_weight_edit"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/rounded_background_edit"
                android:ems="10"
                android:hint="@string/weight"
                android:inputType="number"
                android:padding="10dp" />

            <TextView
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/kg" />
        </LinearLayout>

        <Button
            android:id="@+id/profile_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/control_save"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/change_email_text" />

            <Button
                android:id="@+id/email_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10px"
                android:layout_marginRight="10px"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:text="@string/email"
                android:textColor="@color/red"
                app:strokeColor="@color/red"
                app:strokeWidth="1dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/change_password_text" />

            <Button
                android:id="@+id/password_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10px"
                android:layout_marginRight="10px"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:text="@string/password"
                android:textColor="@color/red"
                app:strokeColor="@color/red"
                app:strokeWidth="1dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/logout_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10px"
                android:layout_marginRight="10px"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:text="@string/logout"
                android:textColor="@color/red"
                app:strokeColor="@color/red"
                app:strokeWidth="1dp" />

            <Button
                android:id="@+id/delete_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10px"
                android:layout_marginRight="10px"
                android:layout_weight="1"
                android:backgroundTint="@color/red"
                android:text="@string/control_delete"
                android:textColor="@color/white"
                app:strokeColor="@color/white"
                app:strokeWidth="1dp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>